Fix: floating portraits overlapping in large view

--- a/assets/styles/illustrations.css
+++ b/assets/styles/illustrations.css
@@ -11,10 +11,11 @@ figure.spread img {
 
 figure.portrait {
   float: right;
+  clear: both;
 
   img {
     width: 100%;
-    max-width: 190px;
+    max-width: 170px;
   }
 
   @media (width <= 450px) {
